--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Numeron</title>
+    <title>ApnaChildhood</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" >
 </head>
 <body>
-    <div class="heading"><h1>NUMERON</h1></div>
-    <div class="subtitle"><h3>Let's Play with numbers</h3></div>
+    <div class="heading"><h1>APNACHILDHOOD</h1></div>
+    <div class="subtitle"><h3>Select the correct conditional operator</h3></div>
     <div class="play-button"><button class = "play" id = "play"><i class="fa-solid fa-play fa-bounce"></i><p>Play Now</p></button></div>
 </body>
 <script src="app.js"></script>
